tests/ui/reborrow/custom_marker_mut_self_b.rs
#![feature(reborrow)]
use std::marker::{Reborrow, PhantomData};

struct CustomMarker<'a>(PhantomData<&'a ()>);
impl<'a> Reborrow for CustomMarker<'a> {}

fn method<'a>(_a: CustomMarker<'a>) -> &'a () {
    &()
}

fn main() {
    let a = CustomMarker(PhantomData);
    let _ = method(a);
    let b = method(a);
    let _ = (a, b);
    //~^ ERROR: cannot move out of `a` because it is borrowed
}
